@@ -3,6 +3,9 @@ Current Version (in development)
     setRTS.
   * Library version is available in `com.hoho.android.usbserial.BuildInfo`.
   * Adds probe support for LUFA CDC device.
+  * setBaudrate() has been removed; use setParameters().
+  * open() no longer implicitly sets the baud rate.  Clients should call
+    setParameters() immediately after open(), when necessary.
 
 v0.1.0 (2012-10-12)
   * New driver: CdcAcmSerialDriver.
